--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ node_modules
 
 # Users Environment Variables
 .lock-wscript
+
+# WebStorm Metadata
+/.idea
+
+# Eclipse Metadata
+/.project
+/.settings
