--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-xl-wrapper",
   "version": "0.0.0",
   "description": "Node.js wrapper around local or remote XEN xl management utility",
-  "main": "index.js",
+    "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/benurb/node-xl-wrapper/issues"
   },
-  "homepage": "https://github.com/benurb/node-xl-wrapper"
+    "homepage": "https://github.com/benurb/node-xl-wrapper",
+    "dependencies": {
+        "ssh2": "^0.3.6"
+    }
 }
