--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "node-xl-wrapper",
-  "version": "0.0.0",
-  "description": "Node.js wrapper around local or remote XEN xl management utility",
-  "main": "lib/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/benurb/node-xl-wrapper.git"
-  },
-  "keywords": [
-    "XEN",
-    "xl",
-    "ssh",
-    "manage VMs"
-  ],
-  "author": "Benjamin Urban <contact@benjaminurban.de>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/benurb/node-xl-wrapper/issues"
-  },
-  "homepage": "https://github.com/benurb/node-xl-wrapper",
-  "dependencies": {
-    "ssh2": "^0.3.6"
-  },
-  "devDependencies": {
-    "chai": "^1.10.0",
-    "grunt": "^0.4.5",
-    "grunt-mocha-test": "^0.12.3",
-    "mocha": "^2.0.1"
-  }
+    "name": "node-xl-wrapper",
+    "version": "0.0.0",
+    "description": "Node.js wrapper around local or remote XEN xl management utility",
+    "main": "lib/index.js",
+    "scripts": {
+        "test": "grunt test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/benurb/node-xl-wrapper.git"
+    },
+    "keywords": [
+        "XEN",
+        "xl",
+        "ssh",
+        "manage VMs"
+    ],
+    "author": "Benjamin Urban <contact@benjaminurban.de>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/benurb/node-xl-wrapper/issues"
+    },
+    "homepage": "https://github.com/benurb/node-xl-wrapper",
+    "dependencies": {
+        "ssh2": "^0.3.6"
+    },
+    "devDependencies": {
+        "chai": "^1.10.0",
+        "grunt": "^0.4.5",
+        "grunt-mocha-test": "^0.12.3",
+        "mocha": "^2.0.1"
+    }
 }
