--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jscs": "^0.8.1",
     "grunt-mocha-test": "^0.12.3",
     "mocha": "^2.0.1"
   }
